fix: Fixing check logic